mobile overflow issue fix

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -17,6 +17,7 @@ body {
   display: block;
   min-width: 100vw;
   min-height: 100vh;
+  overflow-y: auto;
 }
 
 .page_container_flexbox {
